k8s/grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-stack-grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/instance: prometheus-stack
    app.kubernetes.io/name: grafana
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  loadBalancerClass: eks.amazonaws.com/nlb
  selector:
    app.kubernetes.io/instance: prometheus-stack
    app.kubernetes.io/name: grafana
  ports:
    - name: http-web
      protocol: TCP
      port: 80
      targetPort: 3000
